--- a/app.css
+++ b/app.css
@@ -397,6 +397,7 @@ section.slanted.img-right img{
     width: 100vw; 
     padding: 0 2.5rem;
     background-color: hsl(0, 0%, 0%);
+    grid-gap: 2rem;
 }
 .product::after{
     content: "";
