--- a/app.css
+++ b/app.css
@@ -913,10 +913,10 @@ footer hr {
 /*-------Ids-------*/
 
 #home .hero:nth-of-type(1) {
-    background-image: url("pics/cars/car-orange-cloudy.png");
+    background-image: url("pics/cars/car-orange-cloudy-2.png");
 }
 #home .hero:nth-of-type(2) {
-    background-image: url("pics/cars/car-black-blue-bg.jpg");
+    background-image: url("pics/cars/black-ops1-1.png");
 }
 
 
