--- a/app.css
+++ b/app.css
@@ -7,14 +7,14 @@
     --focus-color: cornflowerblue;
     --primary: #000E16;
     --custom-color-1: hsl(0, 0%, 0%);
-    --custom-color-2: hsl(190, 100%, 50%);
-    --custom-color-3: hsl(0, 0%, 100%);
+    --custom-color-2: hsl(0, 97%, 14%);
+    --custom-color-3: hsl(186, 88%, 20%);
     --custom-color-4: hsl(234, 93%, 12%);
     --custom-color-5: hsl(261, 93%, 12%);
     --custom-color-6: hsl(22, 85%, 43%);
-    --custom-color-7: hsl(0, 93%, 12%);
+    --custom-color-7: hsl(0, 86%, 34%);
     --custom-color-8: hsl(56, 90%, 49%);
-    --custom-color-9: hsl(59, 94%, 14%);
+    --custom-color-9: hsl(130, 94%, 14%);
     --custom-color-10: hsl(129, 91%, 5%);
 }
 
@@ -300,7 +300,7 @@ section.slanted.img-right img{
 .card-container-2{
     display: flex;
     justify-items: space-evenly;
-    align-items: flex-start;
+    align-items: ce;
     margin: 25px auto;
     flex-wrap: wrap;
     gap: 25px;
@@ -323,6 +323,7 @@ section.slanted.img-right img{
     width: 304px;
     height: auto; 
 }
+
 .first-4{
     display: flex;
     flex-direction: row;
@@ -447,7 +448,7 @@ section.slanted.img-right img{
     position: relative;
     margin: 10rem auto;
     display: flex;
-    justify-content: center;
+    justify-content: center; 
 }
 
 .customization-exterior-car::after {
@@ -463,8 +464,10 @@ section.slanted.img-right img{
 }
 
 .color-select {
-    position: relative;
+    display: flex;
+    justify-content: center;
     place-items: center;
+    gap: 2rem;
 }
 
 .color-select label {
@@ -785,13 +788,23 @@ div.shaded::before {
     background-image: url("pics/cars/front.png");
     z-index: -1;  
 }
-
-#hero-our-story {
+#hero-nemesis {
     height: 90vh;
-    background-image: url("pics/cars/KS_config_hanger.jpg");
+    background-image: url("pics/cars/orange-nemesis.png");
     z-index: -1;  
 }
 
+#hero-our-story {
+    height: 90vh;
+    background-image: url("pics/cars/trionsupercarsofficial1.jpg");
+    z-index: -1;  
+}
+
+#hero-black{
+    height: 90vh;
+    background-image: url("pics/cars/black-ops1-1.png");
+    z-index: -1;  
+}
 /*-------Footer-------*/
 #to-top {
    display: flex;
