--- a/app.css
+++ b/app.css
@@ -213,6 +213,14 @@ section.slanted.img-right img{
     align-items: flex-end;
 }
 
+.justify-between {
+    justify-content: space-between;
+}
+
+.justify-around {
+    justify-content: space-around;
+}
+
 .wrap {
     flex-wrap: wrap;
 }
@@ -450,6 +458,10 @@ section.slanted.img-right img{
     justify-content: center;
 }
 
+#settings .customization-exterior-car {
+    margin: 3rem 0;
+}
+
 .customization-exterior-car::after {
     content: "";
     position: absolute;
@@ -583,6 +595,45 @@ div[class*=carousel_]:nth-of-type(2) {
 
 div[class*=carousel_]:nth-of-type(3) {
     animation-delay: calc(2s * 4);
+}
+
+#settings main {
+    padding: 10rem 5% 4rem 5%;
+    justify-content: center;
+    max-width: 1440px;
+    margin: auto;
+}
+
+.settings-nav,
+.settings-content {
+    border: solid 2px white;
+    border-radius: 30px;
+    padding: 1rem;
+    height: 40rem;
+}
+
+.settings-nav {
+    width: fit-content;
+    margin-right: 2rem;
+}
+
+.settings-nav li {
+    border-bottom: solid 1px grey;
+    padding-bottom: 1rem;
+    margin-top: 1rem;
+    text-align: center;
+}
+
+.settings-nav .active {
+    color: #c90000;
+}
+
+.settings-content {    
+    flex-grow: 1
+}
+
+.custom-car .buttons {
+    justify-content: space-evenly;
 }
   
 /*------------------------*/
