--- a/app.css
+++ b/app.css
@@ -506,10 +506,10 @@ section.slanted.img-right img {
 #customize .customization-exterior-car .wrapper::before {
     content: "";
     position: absolute;
-    right: -5%; 
-    left: -5%; 
+    right: 0; 
+    left: 0; 
     bottom: 0; 
-    height: 30%;
+    height: 2rem;
     background-image: radial-gradient(#01385B, transparent 80%);
     transform: translateY(50%);
     z-index: -1;
@@ -559,7 +559,7 @@ section.slanted.img-right img {
 .button-left,
 .button-right {
     width: 50px;
-    height: 100%;
+    height: 70%;
     background-color: transparent;
     border: none;
 }
@@ -598,12 +598,13 @@ section.slanted.img-right img {
 .color-select {
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 39%;
     gap: 2rem;
     margin-block-end: 0;
 }
 
-.color-select button {
+.color-select .content button {
     height: 70%;
 }
 
