--- a/app.css
+++ b/app.css
@@ -238,6 +238,10 @@ section.slanted.img-right img {
     display: none;
 }
 
+.overflow-hidden {
+    overflow: hidden;
+}
+
 .no-button {
     color: white;
     background: none;
@@ -533,7 +537,6 @@ section.slanted.img-right img {
     bottom: 0; 
     left: 0; 
     background-color: hsl(0, 0%, 0%);
-    /* opacity: 0.5; */
     mix-blend-mode: color;                
 }
 
@@ -762,7 +765,8 @@ div[class*=carousel_]:nth-of-type(3) {
     border: solid 2px white;
     border-radius: 30px;
     padding: 1rem;
-    height: 40rem;
+    height: 80vh;
+    overflow: auto;
 }
 
 .settings-nav {
@@ -775,6 +779,10 @@ div[class*=carousel_]:nth-of-type(3) {
     padding-bottom: 1rem;
     margin-top: 1rem;
     text-align: center;
+}
+
+.settings-nav ul {
+    overflow: auto;
 }
 
 .settings-nav .active {
@@ -1313,6 +1321,69 @@ footer hr {
     #customize .customization-exterior-car {
         width: 90%;
     }
+
+    #settings main {
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+    .settings-nav,
+    .settings-content {
+        border: solid 2px white;
+        border-radius: 30px;
+        padding: 1rem;
+        width: 100%;
+        height: fit-content;
+        
+    }
+
+    .settings-nav {
+        margin: 0 0 1rem 0;
+    }
+
+    .settings-nav ul {
+        display: flex;
+        flex-direction: row;
+        overflow: auto;
+        justify-content: flex-start;
+        margin: auto;
+    }
+
+    .settings-nav .wrapper {
+        margin: auto;
+    }
+
+    .settings-nav ul li {
+        min-width: 100px;
+        margin: 1rem;
+        padding-bottom: 5px;
+    }
+
+    #garage {
+        height: 80vh;
+        max-height: 300px;
+        padding-top: 2rem;
+        margin: 0;
+    }
+
+    #garage .customization-exterior-car {
+        margin: 1rem 0;
+        padding: 2px;
+    }
+
+    /* #garage :has(> .button) {
+        flex-direction: column;
+        align-items: center;
+    } */
+
+    #garage .button {
+        width: 40%;
+        text-align: center;
+        margin-bottom: 1rem;
+        padding: .6rem;
+        font-size: .6em;
+    }
+
 }
 
 @media screen and (max-width: 425px) {
