--- a/app.css
+++ b/app.css
@@ -41,6 +41,11 @@ a, p, label, h1, h2, h3, h4 {
     color: white;
 }
 
+main {
+    /* max-width: 1440px; */
+    margin: auto;
+}
+
 :focus-visible {
     box-shadow: 0 0 5px 3px var(--focus-color);
     outline: none;
@@ -380,27 +385,30 @@ section.slanted.img-right img {
     background-color: #000000;
     display: flex;
     justify-content: center;
-    font-size: 80px; 
+    font-size: 2em; 
     padding-top: 10rem; 
 }
 
-.contact-info{
+.contact-info {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     font-size: 30px;
-    width: 577px;
+    width: 80%;
+    max-width: 1080px;
     height: auto;
 }
 
 .contact-us-main {
-    background-color: #000000;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     width: auto;
-    height: 25rem;
+}
+
+#contact-us main {
+    max-width: 1080px;
 }
 
 .logo-title {
@@ -1300,7 +1308,7 @@ footer hr {
         flex-flow: column nowrap;
     }
 
-    #footer-contact {
+    footer  #footer-contact {
         display: none;
     }
 
