--- a/app.css
+++ b/app.css
@@ -936,7 +936,7 @@ section[role=hero] {
 
 .hero {
     display: flex;
-    height: 90vh;
+    height: 100vh;
     width: 100vw;
     min-width: 100vw;
     justify-content: center;
@@ -1191,6 +1191,7 @@ footer hr {
         top: 0;
         left: 0;
         background-color: #021018;
+        overflow-y: auto;
         animation: hidden 200ms ease-out forwards;
     }
 
@@ -1271,7 +1272,7 @@ footer hr {
     }
     
     .hero {
-        height: 70vh;
+        height: 100vh;
         background-size: cover;
         background-position: top;
         max-height: 1000px;
